# Hailo-Application-Code-Examples

./: README.md
runtime/hailo-8/cpp/common/: hailo_infer.cpp  toolbox.cpp  toolbox.hpp
runtime/hailo-8/cpp/object_detection/: CMakeLists.txt  object_detection.cpp
